# OxideUI

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-cli/src/codegen/: mod.rs  rust.rs
crates/oxide-cli/src/commands/: config.rs  generate.rs  init.rs  mod.rs  new_project.rs  sync.rs  themes.rs  validate.rs  watch.rs
crates/oxide-cli/src/figma/: client.rs  mod.rs  types.rs
crates/oxide-cli/src/parser/: mod.rs  tokens.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: lib.rs
crates/oxide-core/src/theme/: engine.rs  mod.rs  tests.rs  tokens.rs
crates/oxide-widgets/: Cargo.toml
crates/oxide-widgets/src/: lib.rs  theme_apply.rs
crates/oxide-widgets/src/buttons/: button.rs  button_group.rs  icon_button.rs  mod.rs  toggle_button.rs
crates/oxide-widgets/src/data/: mod.rs
crates/oxide-widgets/src/display/: avatar.rs  badge.rs  icon.rs  label.rs  mod.rs
crates/oxide-widgets/src/feedback/: mod.rs
crates/oxide-widgets/src/inputs/: checkbox.rs  mod.rs  radio.rs  slider.rs  switch.rs  text_area.rs  (+1 more)
docs/: figma-workflow.md  getting-started.md  theming.md
docs/components/: button.md
examples/custom-theme/: Cargo.toml
examples/custom-theme/src/: app.rs  lib.rs  main.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: app.rs  main.rs
examples/theme-switcher/: Cargo.toml
examples/theme-switcher/src/: app.rs  main.rs
figma/: tokens.json  tokens.schema.json
(+8 files in other folders)
