[workspace]
resolver = "2"
members = [
    "crates/oxide-core",
    "crates/oxide-widgets",
    "crates/oxide-cli",
    "examples/showcase",
    "examples/theme-switcher",
    "examples/custom-theme",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CJHersh/OxideUI"
authors = ["OxideUI Contributors"]

[workspace.dependencies]
oxide-core = { path = "crates/oxide-core" }
oxide-widgets = { path = "crates/oxide-widgets" }
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "8b515338a2f50c5e0e2742cdc8b8ee7278aff371" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
