[package]
name = "oxide-cli"
description = "CLI tool for OxideUI Figma integration and code generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
oxide-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
